Update SA sensitive

--- a/source-code/py-notebook/SA-lists.ipynb
+++ b/source-code/py-notebook/SA-lists.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "#import essential libraries\n",
@@ -32,6 +32,7 @@
   {
    "cell_type": "markdown",
    "source": [
+    "## Conservation list\n",
     "Read Excel files into dataframes from these sources:\n",
     " Fauna: [metadata](https://www.environment.sa.gov.au/topics/science/information-and-data/census-of-sa-vertebrates) and [BDBSA taxonomy](https://data.environment.sa.gov.au/Content/Publications/fauna-bdbsa-taxonomy.xlsx)\n",
     " Flora: [metadata](https://www.environment.sa.gov.au/topics/science/information-and-data/census-of-sa-plants-algae-fungi) and [BDBSA taxonomy](https://data.environment.sa.gov.au/Content/Publications/vascular-plants-bdbsa-taxonomy.xlsx)"
@@ -354,10 +355,84 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Sensitive List"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "    Date Listed Fauna/Flora SPECIESTYPE  \\\n0      Mar 2021       Fauna       Birds   \n1      Dec 2018       Fauna       Birds   \n2      Apr 2021       Fauna       Birds   \n3      May 2021       Fauna       Birds   \n4      Jun 2021       Fauna       Birds   \n..          ...         ...         ...   \n203    May 2013       Flora      Plants   \n204    May 2013       Flora      Plants   \n205    May 2013       Flora      Plants   \n206    May 2013       Flora      Plants   \n207    May 2013       Flora      Plants   \n\n                                          Sub Grouping  \\\n0                                                  NaN   \n1                                                  NaN   \n2                                                  NaN   \n3                                                  NaN   \n4                                                  NaN   \n..                                                 ...   \n203                                           Aquatics   \n204                                           Aquatics   \n205  Garden Trade -Other Ornamental Horticulture pl...   \n206                                           Aquatics   \n207  Garden Trade -Other Ornamental Horticulture pl...   \n\n    SA Species Code (NSXCODE)                                 SPECIES  \\\n0                      A21180                Amytornis striatus howei   \n1                      C00513       Amytornis striatus striatus  (NC)   \n2                      M11286                  Amytornis whitei  (NC)   \n3                      C21181                Amytornis whitei aenigma   \n4                      E21182                  Amytornis whitei oweni   \n..                        ...                                     ...   \n203                    Q05400                Utricularia beaugleholei   \n204                    Q02760                 Utricularia lateriflora   \n205                    Z02151  Viola betonicifolia ssp. betonicifolia   \n206                    G05475           Wurmbea dioica ssp. lacunaria   \n207                    E04894           Xanthorrhoea minor ssp. lutea   \n\n                     COMMON NAME    Clarifier  \n0             Striated Grasswren  all records  \n1             Striated Grasswren  all records  \n2               Rufous Grasswren  all records  \n3    Yellabinna Rufous Grasswren  all records  \n4      Sandhill Rufous Grasswren  all records  \n..                           ...          ...  \n203    Beauglehole's Bladderwort  all records  \n204            Small Bladderwort  all records  \n205                 Showy Violet  all records  \n206                 Lagoon Nancy  all records  \n207                 Little Yacca  all records  \n\n[208 rows x 8 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Date Listed</th>\n      <th>Fauna/Flora</th>\n      <th>SPECIESTYPE</th>\n      <th>Sub Grouping</th>\n      <th>SA Species Code (NSXCODE)</th>\n      <th>SPECIES</th>\n      <th>COMMON NAME</th>\n      <th>Clarifier</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Mar 2021</td>\n      <td>Fauna</td>\n      <td>Birds</td>\n      <td>NaN</td>\n      <td>A21180</td>\n      <td>Amytornis striatus howei</td>\n      <td>Striated Grasswren</td>\n      <td>all records</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Dec 2018</td>\n      <td>Fauna</td>\n      <td>Birds</td>\n      <td>NaN</td>\n      <td>C00513</td>\n      <td>Amytornis striatus striatus  (NC)</td>\n      <td>Striated Grasswren</td>\n      <td>all records</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Apr 2021</td>\n      <td>Fauna</td>\n      <td>Birds</td>\n      <td>NaN</td>\n      <td>M11286</td>\n      <td>Amytornis whitei  (NC)</td>\n      <td>Rufous Grasswren</td>\n      <td>all records</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>May 2021</td>\n      <td>Fauna</td>\n      <td>Birds</td>\n      <td>NaN</td>\n      <td>C21181</td>\n      <td>Amytornis whitei aenigma</td>\n      <td>Yellabinna Rufous Grasswren</td>\n      <td>all records</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Jun 2021</td>\n      <td>Fauna</td>\n      <td>Birds</td>\n      <td>NaN</td>\n      <td>E21182</td>\n      <td>Amytornis whitei oweni</td>\n      <td>Sandhill Rufous Grasswren</td>\n      <td>all records</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>203</th>\n      <td>May 2013</td>\n      <td>Flora</td>\n      <td>Plants</td>\n      <td>Aquatics</td>\n      <td>Q05400</td>\n      <td>Utricularia beaugleholei</td>\n      <td>Beauglehole's Bladderwort</td>\n      <td>all records</td>\n    </tr>\n    <tr>\n      <th>204</th>\n      <td>May 2013</td>\n      <td>Flora</td>\n      <td>Plants</td>\n      <td>Aquatics</td>\n      <td>Q02760</td>\n      <td>Utricularia lateriflora</td>\n      <td>Small Bladderwort</td>\n      <td>all records</td>\n    </tr>\n    <tr>\n      <th>205</th>\n      <td>May 2013</td>\n      <td>Flora</td>\n      <td>Plants</td>\n      <td>Garden Trade -Other Ornamental Horticulture pl...</td>\n      <td>Z02151</td>\n      <td>Viola betonicifolia ssp. betonicifolia</td>\n      <td>Showy Violet</td>\n      <td>all records</td>\n    </tr>\n    <tr>\n      <th>206</th>\n      <td>May 2013</td>\n      <td>Flora</td>\n      <td>Plants</td>\n      <td>Aquatics</td>\n      <td>G05475</td>\n      <td>Wurmbea dioica ssp. lacunaria</td>\n      <td>Lagoon Nancy</td>\n      <td>all records</td>\n    </tr>\n    <tr>\n      <th>207</th>\n      <td>May 2013</td>\n      <td>Flora</td>\n      <td>Plants</td>\n      <td>Garden Trade -Other Ornamental Horticulture pl...</td>\n      <td>E04894</td>\n      <td>Xanthorrhoea minor ssp. lutea</td>\n      <td>Little Yacca</td>\n      <td>all records</td>\n    </tr>\n  </tbody>\n</table>\n<p>208 rows × 8 columns</p>\n</div>"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import xlrd\n",
+    "sasensitive = pd.read_excel(\"~/IdeaProjects/authoritative-lists/source-data/SA/DEW_SAEnvironmentallySensitiveDataREGISTER.xls\")\n",
+    "sasensitive"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "    dateListed faunaFlora speciesType  \\\n0     Mar 2021      Fauna       Birds   \n1     Dec 2018      Fauna       Birds   \n2     Apr 2021      Fauna       Birds   \n3     May 2021      Fauna       Birds   \n4     Jun 2021      Fauna       Birds   \n..         ...        ...         ...   \n203   May 2013      Flora      Plants   \n204   May 2013      Flora      Plants   \n205   May 2013      Flora      Plants   \n206   May 2013      Flora      Plants   \n207   May 2013      Flora      Plants   \n\n                                          Sub Grouping saSpeciesCode  \\\n0                                                  NaN        A21180   \n1                                                  NaN        C00513   \n2                                                  NaN        M11286   \n3                                                  NaN        C21181   \n4                                                  NaN        E21182   \n..                                                 ...           ...   \n203                                           Aquatics        Q05400   \n204                                           Aquatics        Q02760   \n205  Garden Trade -Other Ornamental Horticulture pl...        Z02151   \n206                                           Aquatics        G05475   \n207  Garden Trade -Other Ornamental Horticulture pl...        E04894   \n\n                             scientificName               vernacularName  \\\n0                  Amytornis striatus howei           Striated Grasswren   \n1         Amytornis striatus striatus  (NC)           Striated Grasswren   \n2                    Amytornis whitei  (NC)             Rufous Grasswren   \n3                  Amytornis whitei aenigma  Yellabinna Rufous Grasswren   \n4                    Amytornis whitei oweni    Sandhill Rufous Grasswren   \n..                                      ...                          ...   \n203                Utricularia beaugleholei    Beauglehole's Bladderwort   \n204                 Utricularia lateriflora            Small Bladderwort   \n205  Viola betonicifolia ssp. betonicifolia                 Showy Violet   \n206           Wurmbea dioica ssp. lacunaria                 Lagoon Nancy   \n207           Xanthorrhoea minor ssp. lutea                 Little Yacca   \n\n       clarifier  \n0    all records  \n1    all records  \n2    all records  \n3    all records  \n4    all records  \n..           ...  \n203  all records  \n204  all records  \n205  all records  \n206  all records  \n207  all records  \n\n[208 rows x 8 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>dateListed</th>\n      <th>faunaFlora</th>\n      <th>speciesType</th>\n      <th>Sub Grouping</th>\n      <th>saSpeciesCode</th>\n      <th>scientificName</th>\n      <th>vernacularName</th>\n      <th>clarifier</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Mar 2021</td>\n      <td>Fauna</td>\n      <td>Birds</td>\n      <td>NaN</td>\n      <td>A21180</td>\n      <td>Amytornis striatus howei</td>\n      <td>Striated Grasswren</td>\n      <td>all records</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Dec 2018</td>\n      <td>Fauna</td>\n      <td>Birds</td>\n      <td>NaN</td>\n      <td>C00513</td>\n      <td>Amytornis striatus striatus  (NC)</td>\n      <td>Striated Grasswren</td>\n      <td>all records</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Apr 2021</td>\n      <td>Fauna</td>\n      <td>Birds</td>\n      <td>NaN</td>\n      <td>M11286</td>\n      <td>Amytornis whitei  (NC)</td>\n      <td>Rufous Grasswren</td>\n      <td>all records</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>May 2021</td>\n      <td>Fauna</td>\n      <td>Birds</td>\n      <td>NaN</td>\n      <td>C21181</td>\n      <td>Amytornis whitei aenigma</td>\n      <td>Yellabinna Rufous Grasswren</td>\n      <td>all records</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Jun 2021</td>\n      <td>Fauna</td>\n      <td>Birds</td>\n      <td>NaN</td>\n      <td>E21182</td>\n      <td>Amytornis whitei oweni</td>\n      <td>Sandhill Rufous Grasswren</td>\n      <td>all records</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>203</th>\n      <td>May 2013</td>\n      <td>Flora</td>\n      <td>Plants</td>\n      <td>Aquatics</td>\n      <td>Q05400</td>\n      <td>Utricularia beaugleholei</td>\n      <td>Beauglehole's Bladderwort</td>\n      <td>all records</td>\n    </tr>\n    <tr>\n      <th>204</th>\n      <td>May 2013</td>\n      <td>Flora</td>\n      <td>Plants</td>\n      <td>Aquatics</td>\n      <td>Q02760</td>\n      <td>Utricularia lateriflora</td>\n      <td>Small Bladderwort</td>\n      <td>all records</td>\n    </tr>\n    <tr>\n      <th>205</th>\n      <td>May 2013</td>\n      <td>Flora</td>\n      <td>Plants</td>\n      <td>Garden Trade -Other Ornamental Horticulture pl...</td>\n      <td>Z02151</td>\n      <td>Viola betonicifolia ssp. betonicifolia</td>\n      <td>Showy Violet</td>\n      <td>all records</td>\n    </tr>\n    <tr>\n      <th>206</th>\n      <td>May 2013</td>\n      <td>Flora</td>\n      <td>Plants</td>\n      <td>Aquatics</td>\n      <td>G05475</td>\n      <td>Wurmbea dioica ssp. lacunaria</td>\n      <td>Lagoon Nancy</td>\n      <td>all records</td>\n    </tr>\n    <tr>\n      <th>207</th>\n      <td>May 2013</td>\n      <td>Flora</td>\n      <td>Plants</td>\n      <td>Garden Trade -Other Ornamental Horticulture pl...</td>\n      <td>E04894</td>\n      <td>Xanthorrhoea minor ssp. lutea</td>\n      <td>Little Yacca</td>\n      <td>all records</td>\n    </tr>\n  </tbody>\n</table>\n<p>208 rows × 8 columns</p>\n</div>"
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sasensitive = sasensitive.rename(columns=\n",
+    "{\n",
+    "    'Date Listed':'dateListed',\n",
+    "    'Fauna/Flora':'faunaFlora',\n",
+    "    'SPECIESTYPE':'speciesType',\n",
+    "    'SA Species Code (NSXCODE)':'saSpeciesCode',\n",
+    "    'SPECIES':'scientificName',\n",
+    "    'COMMON NAME':'vernacularName',\n",
+    "    'Clarifier':'clarifier'\n",
+    "})\n",
+    "sasensitive"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "outputs": [],
-   "source": [],
+   "source": [
+    "sasensitive.to_csv(\"~/IdeaProjects/authoritative-lists/current-lists/sensitive-lists/SA-sensitive.csv\",encoding=\"UTF-8\",index=False)"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
