Corrected column name

--- a/source-code/py-notebook/VIC-lists.ipynb
+++ b/source-code/py-notebook/VIC-lists.ipynb
@@ -101,7 +101,7 @@
     "    'COMMON_NAME':'vernacularName',\n",
     "    'AUTHORITY':'scientificNameAuthority',\n",
     "    'PRIMARY_DISCIPLINE': 'primaryDiscipline',\n",
-    "    'RESTRICTED_FLAG' : 'restricteFlag',\n",
+    "    'RESTRICTED_FLAG' : 'restrictedFlag',\n",
     "    'EXTRACT_DATE': 'extractDate',\n",
     "    'LAST_MOD':'modified'\n",
     "})\n",
