Reworked column names - camel case Sensitive lists

--- a/source-code/py-notebook/columnUpdate-all.ipynb
+++ b/source-code/py-notebook/columnUpdate-all.ipynb
@@ -40,7 +40,6 @@
     }
    ],
    "source": [
-    "# update the encoding on the final file\n",
     "fName= \"TAS-conservation\"\n",
     "df = pd.read_csv(projectDir + dataDir + fName + \".csv\")\n",
     "df.columns = df.columns.str.strip()\n",
@@ -71,7 +70,6 @@
     }
    ],
    "source": [
-    "# update the encoding on the final file\n",
     "fName= \"WA-conservation\"\n",
     "df = pd.read_csv(projectDir + dataDir + fName + \".csv\")\n",
     "df.columns = df.columns.str.strip()\n",
@@ -102,7 +100,6 @@
     }
    ],
    "source": [
-    "# update the encoding on the final file\n",
     "fName= \"ACT-conservation\"\n",
     "df = pd.read_csv(projectDir + dataDir + fName + \".csv\")\n",
     "df.columns = df.columns.str.strip()\n",
@@ -133,7 +130,6 @@
     }
    ],
    "source": [
-    "# update the encoding on the final file\n",
     "fName= \"NSW-conservation\"\n",
     "df = pd.read_csv(projectDir + dataDir + fName + \".csv\")\n",
     "df.columns = df.columns.str.strip()\n",
@@ -164,7 +160,6 @@
     }
    ],
    "source": [
-    "# update the encoding on the final file\n",
     "fName= \"NT-conservation\"\n",
     "df = pd.read_csv(projectDir + dataDir + fName + \".csv\")\n",
     "df.columns = df.columns.str.strip()\n",
@@ -195,7 +190,6 @@
     }
    ],
    "source": [
-    " #update the encoding on the final file\n",
     "fName= \"QLD-conservation\"\n",
     "df = pd.read_csv(projectDir + dataDir + fName + \".csv\")\n",
     "df.columns = df.columns.str.strip()\n",
@@ -226,7 +220,6 @@
     }
    ],
    "source": [
-    "#update the encoding on the final file\n",
     "fName= \"SA-conservation\"\n",
     "df = pd.read_csv(projectDir + dataDir + fName + \".csv\")\n",
     "df.columns = df.columns.str.strip()\n",
@@ -245,20 +238,180 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "outputs": [
     {
      "data": {
       "text/plain": "Index(['taxonId', 'scientificName', 'vernacularName',\n       'scientificNameAuthority', 'primaryDiscipline', 'establishmentMeans',\n       'taxonRank', 'speciesGroup', 'ffgactStatus', 'epbcactStatus', 'status',\n       'restrictedFlag', 'modified', 'extractDate'],\n      dtype='object')"
      },
-     "execution_count": 37,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#update the encoding on the final file\n",
     "fName= \"VIC-conservation\"\n",
+    "df = pd.read_csv(projectDir + dataDir + fName + \".csv\")\n",
+    "df.columns = df.columns.str.strip()\n",
+    "#Camel case all column names\n",
+    "df = clean_columns(df, case = 'camel')\n",
+    "# df.to_csv(projectDir + dataDir + fName + \"-1.csv\",index=False)\n",
+    "df.columns"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "outputs": [],
+   "source": [
+    "## Update Sensitive Lists\n",
+    "projectDir = \"/Users/oco115/PycharmProjects/authoritative-lists/\"\n",
+    "dataDir = \"current-lists/sensitive-lists/\"\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Index(['taxonRank', 'kingdom', 'class', 'order', 'family', 'genus',\n       'scientificName', 'specificEpithet', 'vernacularName',\n       'establishmentMeans', 'sourceStatus', 'protectedInNsw',\n       'sensitivityClass', 'tsProfileId', 'countryConservation',\n       'dctermsModified', 'speciesId', 'taxonId', 'generalisation', 'status'],\n      dtype='object')"
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fName= \"NSW-sensitive\"\n",
+    "df = pd.read_csv(projectDir + dataDir + fName + \".csv\")\n",
+    "df.columns = df.columns.str.strip()\n",
+    "#Camel case all column names\n",
+    "df = clean_columns(df, case = 'camel')\n",
+    "df.to_csv(projectDir + dataDir + fName + \"-1.csv\",index=False)\n",
+    "df.columns"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Index(['taxonId', 'kingdom', 'class', 'family', 'scientificName',\n       'vernacularName', 'scientificNameAuthorship', 'sourceStatus',\n       'significant', 'status', 'endemicity', 'epbcStatus'],\n      dtype='object')"
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fName= \"QLD-sensitive\"\n",
+    "df = pd.read_csv(projectDir + dataDir + fName + \".csv\")\n",
+    "df.columns = df.columns.str.strip()\n",
+    "#Camel case all column names\n",
+    "df = clean_columns(df, case = 'camel')\n",
+    "df.to_csv(projectDir + dataDir + fName + \"-1.csv\",index=False)\n",
+    "df.columns"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Index(['dateListed', 'faunaFlora', 'speciesType', 'subGrouping',\n       'saSpeciesCode', 'scientificName', 'vernacularName', 'clarifier'],\n      dtype='object')"
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fName= \"SA-sensitive\"\n",
+    "df = pd.read_csv(projectDir + dataDir + fName + \".csv\")\n",
+    "df.columns = df.columns.str.strip()\n",
+    "#Camel case all column names\n",
+    "df = clean_columns(df, case = 'camel')\n",
+    "df.to_csv(projectDir + dataDir + fName + \"-1.csv\",index=False)\n",
+    "df.columns"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Index(['vbaTaxonId', 'scientificName', 'vernacularName',\n       'scientificNameAuthoritiy', 'family', 'ffgStatus', 'ffgDesc',\n       'epbcStatus', 'epbcDesc', 'sourceStatus', 'status', 'sensiivityZoneId',\n       'vbaRestriction', 'vbaOrigin', 'speciesGroup', 'identificationRemarks',\n       'vbaTreaty', 'vbaDiscipline', 'kingdom', 'taxonRank', 'modified'],\n      dtype='object')"
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fName= \"VIC-sensitive\"\n",
+    "df = pd.read_csv(projectDir + dataDir + fName + \".csv\")\n",
+    "df.columns = df.columns.str.strip()\n",
+    "#Camel case all column names\n",
+    "df = clean_columns(df, case = 'camel')\n",
+    "df.to_csv(projectDir + dataDir + fName + \"-1.csv\",index=False)\n",
+    "df.columns"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Index(['waTaxonId', 'scientificName', 'vernacularName', 'class', 'status',\n       'sourceStatus', 'waStatus', 'waRank', 'epbcStatus', 'epbcDesc',\n       'sensitivityZoneId', 'county', 'municipality', 'verbatimLocality',\n       'taxonRemarks'],\n      dtype='object')"
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fName= \"WA-sensitive\"\n",
     "df = pd.read_csv(projectDir + dataDir + fName + \".csv\")\n",
     "df.columns = df.columns.str.strip()\n",
     "#Camel case all column names\n",
