Reworked column names - -reverted changes

--- a/source-code/py-notebook/columnUpdate-all.ipynb
+++ b/source-code/py-notebook/columnUpdate-all.ipynb
@@ -2,20 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "Index(['scientificName', 'scientificNameAuthorship', 'vernacularName',\n       'family', 'class', 'sourceStatus', 'status', 'epbcaStatus',\n       'sourceKingdom', 'kingdom', 'speciesGroup', 'unnamed11', 'sourceOrigin',\n       'higherGeography'],\n      dtype='object')"
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#import essential libraries\n",
     "import pandas as pd\n",
@@ -58,13 +49,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
-      "text/plain": "Index(['waTaxonId', 'scientificName', 'vernacularName', 'class', 'status',\n       'sourceStatus', 'waStatus', 'waRank', 'epbcStatus', 'epbcDesc',\n       'sensitivityZoneId', 'county', 'municipality', 'verbatimLocality',\n       'taxonRemarks'],\n      dtype='object')"
+      "text/plain": "Index(['WATaxonID', 'scientificName', 'vernacularName', 'class', 'status',\n       'sourceStatus', 'waStatus', 'waRank', 'epbcStatus', 'epbcDesc',\n       'sensitivityZoneId', 'county', 'municipality', 'verbatimLocality',\n       'taxonRemarks'],\n      dtype='object')"
      },
-     "execution_count": 25,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +65,11 @@
     "df = pd.read_csv(projectDir + dataDir + fName + \".csv\")\n",
     "df.columns = df.columns.str.strip()\n",
     "#Camel case all column names\n",
-    "df = clean_columns(df, case = 'camel')\n",
+    "# df = clean_columns(df, case = 'camel')\n",
+    "df = df.rename(columns=\n",
+    "{\n",
+    "    'waTaxonId':'wATaxonID'\n",
+    "})\n",
     "# df.drop(['unnamed11'],axis=1)\n",
     "df.to_csv(projectDir + dataDir + fName + \"-1.csv\",index=False)\n",
     "df.columns"
@@ -118,13 +113,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
-      "text/plain": "Index(['taxonRank', 'kingdom', 'class', 'order', 'family', 'genus',\n       'scientificName', 'specificEpithet', 'vernacularName',\n       'establishmentMeans', 'sourceStatus', 'protectedInNsw',\n       'sensitivityClass', 'tsProfileId', 'countryConservation',\n       'dctermsModified', 'speciesId', 'taxonId', 'status'],\n      dtype='object')"
+      "text/plain": "Index(['taxonRank', 'kingdom', 'class', 'order', 'family', 'genus',\n       'scientificName', 'specificEpithet', 'vernacularName',\n       'establishmentMeans', 'sourceStatus', 'protectedInNSW',\n       'sensitivityClass', 'tsProfileID', 'countryConservation',\n       'dcterms_modified', 'speciesID', 'taxonID', 'status'],\n      dtype='object')"
      },
-     "execution_count": 27,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +129,11 @@
     "df = pd.read_csv(projectDir + dataDir + fName + \".csv\")\n",
     "df.columns = df.columns.str.strip()\n",
     "#Camel case all column names\n",
-    "df = clean_columns(df, case = 'camel')\n",
+    "# df = clean_columns(df, case = 'camel')\n",
+    "df = df.rename(columns=\n",
+    "{\n",
+    "    'TSProfileID':'tsProfileID'\n",
+    "})\n",
     "# df.drop(['unnamed11'],axis=1)\n",
     "df.to_csv(projectDir + dataDir + fName + \"-1.csv\",index=False)\n",
     "df.columns"
@@ -267,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "## Update Sensitive Lists\n",
@@ -283,13 +282,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
-      "text/plain": "Index(['taxonRank', 'kingdom', 'class', 'order', 'family', 'genus',\n       'scientificName', 'specificEpithet', 'vernacularName',\n       'establishmentMeans', 'sourceStatus', 'protectedInNsw',\n       'sensitivityClass', 'tsProfileId', 'countryConservation',\n       'dctermsModified', 'speciesId', 'taxonId', 'generalisation', 'status'],\n      dtype='object')"
+      "text/plain": "Index(['taxonRank', 'kingdom', 'class', 'order', 'family', 'genus',\n       'scientificName', 'specificEpithet', 'vernacularName',\n       'establishmentMeans', 'sourceStatus', 'protectedInNSW',\n       'sensitivityClass', 'tsProfileID', 'countryConservation',\n       'dcterms_Modified', 'speciesID', 'taxonID', 'generalisation', 'status'],\n      dtype='object')"
      },
-     "execution_count": 47,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +298,11 @@
     "df = pd.read_csv(projectDir + dataDir + fName + \".csv\")\n",
     "df.columns = df.columns.str.strip()\n",
     "#Camel case all column names\n",
-    "df = clean_columns(df, case = 'camel')\n",
+    "# df = clean_columns(df, case = 'camel')\n",
+    "df = df.rename(columns=\n",
+    "{\n",
+    "    'TSProfileID':'tsProfileID'\n",
+    "})\n",
     "df.to_csv(projectDir + dataDir + fName + \"-1.csv\",index=False)\n",
     "df.columns"
    ],
