Columns names and data for EPBC filter update

--- a/source-code/py-notebook/columnUpdate-all.ipynb
+++ b/source-code/py-notebook/columnUpdate-all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -68,7 +68,7 @@
     "# df = clean_columns(df, case = 'camel')\n",
     "df = df.rename(columns=\n",
     "{\n",
-    "    'waTaxonId':'wATaxonID'\n",
+    "    'waTaxonId':'taxonID'\n",
     "})\n",
     "# df.drop(['unnamed11'],axis=1)\n",
     "df.to_csv(projectDir + dataDir + fName + \"-1.csv\",index=False)\n",
@@ -253,7 +253,7 @@
     "df = pd.read_csv(projectDir + dataDir + fName + \".csv\")\n",
     "df.columns = df.columns.str.strip()\n",
     "#Camel case all column names\n",
-    "df = clean_columns(df, case = 'camel')\n",
+    "# df = clean_columns(df, case = 'camel')\n",
     "# df.to_csv(projectDir + dataDir + fName + \"-1.csv\",index=False)\n",
     "df.columns"
    ],
